bugs are fixed - second